--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title> Fill the form bitch! </title>
 	</head>
 <body>
-	<form action="https://formsubmit.co/joecastrocj@gmail.com" method="post">     
+	<form action="https://formsubmit.co/692f192c892b64a3d60254b552bff5d3" method="post">     
 	<p>Name:</p>
 	<p><input type="text" name="your name"> </p>
 	<p>Type:</p>
